<resources>
    <string name="app_name">LifeU</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="name">Nama</string>
    <string name="img">ImageView</string>
    <string name="mental">Mental Consul</string>

    <string name="desc">Description</string>
    <string name="Register">Register</string>
    <string name="title_hint">Activity Name</string>
    <string name="title_welcome_page">Hi, Welcome to Laifu!</string>
    <string name="message_welcome_page">Personalized Recommendations for Healthy Living and Mental Well-being </string>
</resources>